#
# Makefile.am -- generate Makefile for include files (mainly for install
#                target)
#
# (c) 2001 Dr. Andreas Mueller, Beratung und Entwicklung
#
# $Id: Makefile.am,v 1.5 2002/02/19 23:40:04 afm Exp $
#
noinst_HEADERS = init.h isasu.h decode.h sigattr.h pkcsreq.h certrep.h 	\
	scep.h getcertinitial.h getcert.h getcrl.h badreply.h attr.h 	\
	goodreply.h encode.h check.h grant.h scepldap.h fingerprint.h	\
	openscep_vers.h selfsigned.h createreq.h http.h iser.h proxy.h	\
	payload.h v2request.h transcheck.h pending.h missl.h spki2file.h
